--- a/styles.css
+++ b/styles.css
@@ -74,8 +74,7 @@ h1 {
 }
 
 #cas-button:hover {
-    background-color: darkblue;
-    font-weight: bolder;
+    background-color: darkorange;
 }
 
 #depth-input-field {
