--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ html, body {
 
 #result-div {
     width: 90%;
-    margin: 0 auto;
+    margin: 20px auto;
     min-height: 200px;
     border-radius: 5px;
 }
@@ -23,12 +23,12 @@ html, body {
     text-align: center;
     font-family: 'Coiny', cursive;
     color: darkblue;
-    width: 100%;
+    width: 90%;
     word-wrap: break-word;
-    color: darkblue;
     background-color: orange;
     border-radius: 5px;
-    padding: 0 10px;
+    padding: 10px;
+    margin: 0 auto;
 }
 
 h1 {
